// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button-field Renders \`button-field\` with custom props 1`] = `
<div
  class="widget-settings-flat-item v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="v-list-item__content"
  >
    <div
      class="v-list-item__title"
    >
      Title
    </div>
  </div>
  <div
    class="v-list-item__action mr-3"
  >
    <div
      class="layout justify-end"
    >
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <span>
            Create
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`button-field Renders \`button-field\` with default props 1`] = `
<div
  class="widget-settings-flat-item v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="v-list-item__content"
  >
    <div
      class="v-list-item__title"
    >
      Custom title
    </div>
  </div>
  <div
    class="v-list-item__action mr-3"
  >
    <div
      class="layout justify-end"
    >
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <span>
            Edit
          </span>
        </span>
      </button>
      <!---->
    </div>
  </div>
</div>
`;
